--- a/exercises/02-containerize-app/app/index.html
+++ b/exercises/02-containerize-app/app/index.html
@@ -1,8 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head><meta charset="utf-8"><title>Sample App</title></head>
-<body>
-  <h1>Platform Building Blocks — Sample App</h1>
-  <p>Built by CI run: ${{ github.run_id }}</p>
-</body>
+  <head>
+    <title>CI/CD Demo</title>
+  </head>
+  <body>
+    <h1>Hello from CI/CD Lab!</h1>
+    <p>Build: {{BUILD_ID}}</p>
+  </body>
 </html>
